Oddin for nvim, and some misc stuff.

--- a/nvim/.config/nvim/coc-settings.json
+++ b/nvim/.config/nvim/coc-settings.json
@@ -1,4 +1,11 @@
 {
-  "clangd.inlayHints.enable": false
-  
+    "clangd.inlayHints.enable": false,
+
+    "languageserver": {
+        "odin": {
+            "command": "ols",
+            "filetypes": ["odin"],
+            "rootPatterns": ["ols.json"]
+        }
+    }
 }
