--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,26 +1,23 @@
-# List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'lawabidingcactus/tmux-gruvbox-truecolor'
 
-# Other examples:
-# set -g @plugin 'github_username/plugin_name'
-# set -g @plugin 'github_username/plugin_name#branch'
-# set -g @plugin 'git@github.com:user/plugin'
-# set -g @plugin 'git@bitbucket.com:user/plugin'
+#set -g prefix C-space
+#bind C-a send-prefix
+#unbind C-b
 
-set -g prefix C-space
-bind C-a send-prefix
-unbind C-b
-
-set -g default-terminal "xterm-256color"
-set-option -gas terminal-overrides ",xterm*:RGB"
+set -g default-terminal "tmux-256color"
+set -ag terminal-overrides ",xterm-256color:RGB"
 
 set -g base-index 1
 setw -g pane-base-index 1
 set -g renumber-windows on
 
 set -g mouse on
+
+set -s escape-time 5
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+#set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'lawabidingcactus/tmux-gruvbox-truecolor'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
