--- a/nvim/.config/nvim/coc-settings.json
+++ b/nvim/.config/nvim/coc-settings.json
@@ -1,6 +1,6 @@
 {
     "suggest.noselect": true,
-    "clangd.inlayHints.enable": false,
+    "semanticTokens.enable": true,
 
     "languageserver": {
         "odin": {
