--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -1,22 +1,30 @@
+window:
+  dimensions:
+    columns: 140
+    lines: 40
+  padding:
+    x: 0
+    y: 0
+
 # Font configuration
 font:
-  size: 11
+  size: 14
   normal:
-    family: "FiraCode Nerd Font Mono"
+    family: "FiraCode Nerd Font"
     style: Regular
   bold:
-    family: "FiraCode Nerd Font Mono"
+    family: "FiraCode Nerd Font"
     style: Bold
   italic:
-    family: "FiraCode Nerd Font Mono"
+    family: "FuraCode Nerd Font"
     style: Italic
   bold_italic:
-    family: "FiraCode Nerd Font Mono"
+    family: "FuraCode Nerd Font"
     style: Bold Italic
 
 
 # If `true`, bold text is drawn using the bright color variants.
-#draw_bold_text_with_bright_colors: false
+draw_bold_text_with_bright_colors: false
 
 # Live config reload (changes require restart)
 live_config_reload: true
