Playing with vim theming and fontts..

--- a/nvim/.config/nvim/coc-settings.json
+++ b/nvim/.config/nvim/coc-settings.json
@@ -1,6 +1,6 @@
 {
     "suggest.noselect": true,
-    "semanticTokens.enable": true,
+    "semanticTokens.filetypes": ["*"],
 
     "languageserver": {
         "odin": {
