--- a/nvim/.config/nvim/coc-settings.json
+++ b/nvim/.config/nvim/coc-settings.json
@@ -1,4 +1,14 @@
 {
+    "clangd.arguments": [
+        "--header-insertion=never",
+        "--limit-references=100",
+        "--limit-results=20",
+        "-j=10",
+        "--malloc-trim",
+        "--background-index",
+        "--pch-storage=memory"
+    ],
+
     "suggest.noselect": true,
     "semanticTokens.filetypes": ["*"],
 
@@ -37,6 +47,7 @@
       "IWYU",
       "Jorri",
       "KIBIBYTE",
+      "LPWSTR",
       "LTEQ",
       "MEBIBYTE",
       "Munif",
@@ -73,6 +84,7 @@
       "dotenv",
       "elength",
       "gruvbox",
+      "gstr",
       "idents",
       "infotable",
       "jackguo",
@@ -84,6 +96,7 @@
       "lhsi",
       "lhsr",
       "libvcruntime",
+      "libz",
       "libzrs",
       "lsuffix",
       "ltab",
@@ -106,6 +119,7 @@
       "phpcs",
       "phpcsf",
       "praem",
+      "println",
       "psliwka",
       "pyodbc",
       "rebelot",
@@ -114,17 +128,22 @@
       "rhsi",
       "rhsr",
       "rhysd",
+      "rparen",
       "rsuffix",
       "scrt",
       "scrti",
       "scrtn",
       "sheerun",
       "showkmode",
+      "spos",
       "stmts",
       "tpope",
       "ucrt",
+      "vecs",
       "voldikss",
+      "vxptr",
       "zalloate",
+      "zmemcmp",
       "zmemcpy",
       "zmemmove",
       "zmemset",
@@ -133,4 +152,5 @@
       "ztmp",
       "zzeromem"
     ],
+    "zig.zls.path": "/home/jorri/.config/coc/extensions/coc-zls-data/zls_install/zls",
 }
