--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -5,22 +5,40 @@ window:
   padding:
     x: 0
     y: 0
+  # opacity: 1
+  opacity: 0.99
 
-# Font configuration
+# Font configuration (changes require restart)
 font:
-  size: 14
   normal:
-    family: "FiraCode Nerd Font"
+    family: JetBrainsMono Nerd Font
     style: Regular
   bold:
-    family: "FiraCode Nerd Font"
+    family: JetBrainsMono Nerd Font
     style: Bold
   italic:
-    family: "FuraCode Nerd Font"
+    family: JetBrainsMono Nerd Font
     style: Italic
-  bold_italic:
-    family: "FuraCode Nerd Font"
-    style: Bold Italic
+
+  # Point size of the font
+  size: 15
+
+  # Offset is the extra space around each character. offset.y can be thought of
+  # as modifying the linespacing, and offset.x as modifying the letter spacing.
+  offset:
+    x: 0
+    y: 0
+
+  # Glyph offset determines the locations of the glyphs within their cells with
+  # the default being at the bottom. Increase the x offset to move the glyph to
+  # the right, increase the y offset to move the glyph upward.
+  glyph_offset:
+    x: 0
+    y: 0
+
+  # Scale the font size based on the monitor's DPI. This will lead to bigger text on HiDPI
+  # screens and make reading text a little easier.
+  scale_with_dpi: true
 
 
 # If `true`, bold text is drawn using the bright color variants.
@@ -32,34 +50,35 @@ live_config_reload: true
 env:
   TERM: xterm-256color
 
-# Nightfox Alacritty Colors
-# Style: carbonfox
-# Upstream: https://github.com/edeneast/nightfox.nvim/raw/main/extra/carbonfox/nightfox_alacritty.yml
+# TokyoNight Alacritty Colors
 colors:
   # Default colors
   primary:
-    background: '0x161616'
-    foreground: '0xf2f4f8'
+    background: '0x1a1b26'
+    foreground: '0xc0caf5'
+
   # Normal colors
   normal:
-    black:   '0x282828'
-    red:     '0xee5396'
-    green:   '0x25be6a'
-    yellow:  '0x08bdba'
-    blue:    '0x78a9ff'
-    magenta: '0xbe95ff'
-    cyan:    '0x33b1ff'
-    white:   '0xdfdfe0'
+    black:   '0x15161e'
+    red:     '0xf7768e'
+    green:   '0x9ece6a'
+    yellow:  '0xe0af68'
+    blue:    '0x7aa2f7'
+    magenta: '0xbb9af7'
+    cyan:    '0x7dcfff'
+    white:   '0xa9b1d6'
+
   # Bright colors
   bright:
-    black:   '0x484848'
-    red:     '0xf16da6'
-    green:   '0x46c880'
-    yellow:  '0x2dc7c4'
-    blue:    '0x8cb6ff'
-    magenta: '0xc8a5ff'
-    cyan:    '0x52bdff'
-    white:   '0xe4e4e5'
+    black:   '0x414868'
+    red:     '0xf7768e'
+    green:   '0x9ece6a'
+    yellow:  '0xe0af68'
+    blue:    '0x7aa2f7'
+    magenta: '0xbb9af7'
+    cyan:    '0x7dcfff'
+    white:   '0xc0caf5'
+
   indexed_colors:
-    - { index: 16, color: '0x3ddbd9' }
-    - { index: 17, color: '0xff7eb6' }
+    - { index: 16, color: '0xff9e64' }
+    - { index: 17, color: '0xdb4b4b' }
