--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -5,8 +5,8 @@ set -g mouse on
 
 # Set prefix
 unbind C-b
-set -g prefix C-Space
-bind C-Space send-prefix
+set -g prefix M-Space
+bind M-Space send-prefix
 
 # Navigate between windows with Shift-h and Shift-l
 bind -n M-H previous-window
@@ -70,7 +70,7 @@ if-shell '[ "$(tmux show-option -gqv "clock-mode-style")" == "24" ]' {
 setw -g window-status-activity-style "underscore,fg=#a9b1d6,bg=#16161e"
 setw -g window-status-separator ""
 setw -g window-status-style "NONE,fg=#a9b1d6,bg=#16161e"
-setw -g window-status-format "#[fg=#16161e,bg=#16161e,nobold,nounderscore,noitalics]#[default] #I #W #F hi#[fg=#16161e,bg=#16161e,nobold,nounderscore,noitalics]"
+setw -g window-status-format "#[fg=#16161e,bg=#16161e,nobold,nounderscore,noitalics]#[default] #I #W #F #[fg=#16161e,bg=#16161e,nobold,nounderscore,noitalics]"
 setw -g window-status-current-format "#[fg=#16161e,bg=#3b4261,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#3b4261,bold] #I #W #F #[fg=#3b4261,bg=#16161e,nobold,nounderscore,noitalics]"
 
 # tmux-plugins/tmux-prefix-highlight support
