Moving the scripts directory around.

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -24,10 +24,13 @@ set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
-
 # Open new splits in cwd
 bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
+# Hide status bar
+bind b set-option -g status
+
+bind -r f run-shell "tmux neww tmux_sessionizer"
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
