--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -40,8 +40,8 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 run '~/.tmux/plugins/tpm/tpm'
 
 
-
-
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
+set -as terminal-features ",alacritty:usstyle"
 
 
 # TokyoNight colors for Tmux
