--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -2455,7 +2455,7 @@ initial_window_height 800
 
 
 background_opacity 0.97
-# background_opacity 0.1
+# background_opacity 0.8
 
 background #1a1b26
 foreground #c0caf5
@@ -2498,4 +2498,4 @@ color15 #c0caf5
 
 # extended colors
 color16 #ff9e64
-color17 #db4b4b
+color17 #db4b45
