--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,6 +1,8 @@
 # set -sg escape-time 0
 
-# True color
+
+set -g extended-keys on
+set -as terminal-features ",xterm-wezterm:extkeys"
 set-option -sa terminal-overrides ",xterm*:Tc"
 set -g mouse on
 
@@ -34,8 +36,8 @@ bind b set-option -g status
 bind -r f run-shell "tmux neww tmux_sessionizer"
 
 
-set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
-set -as terminal-features ",alacritty:usstyle"
+# set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
+# set -as terminal-features ",alacritty:usstyle"
 
 
 # TokyoNight colors for Tmux
