--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,5 +1,6 @@
 # set -sg escape-time 0
 
+bind r source-file ~/.tmux.conf \; display-message "Config reloaded!"
 
 set -g extended-keys on
 set -as terminal-features ",xterm-wezterm:extkeys"
@@ -39,20 +40,29 @@ bind -r f run-shell "tmux neww tmux_sessionizer"
 # set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
 # set -as terminal-features ",alacritty:usstyle"
 
+set -g @light_blue '#7aa2f7'
+set -g @mid_blue '#3b4261'
+set -g @black '#080c10'
+set -g @mid_black '#181c20'
 
-# TokyoNight colors for Tmux
-set -g mode-style "fg=#7aa2f7,bg=#3b4261"
+set -g @status_fg '#767b7f'
+set -g @status_bg '#012a50'
+set -g @status_fg_dim '#7aa2f7'
+set -g @status_bg_dim '#3b4261'
+set -g @status_bg_prefix '#de7b58'
 
-set -g message-style "fg=#7aa2f7,bg=#3b4261"
-set -g message-command-style "fg=#7aa2f7,bg=#3b4261"
+set -g mode-style "fg=#{@light_blue},bg=#{@mid_blue}"
 
-set -g pane-border-style "fg=#3b4261"
-set -g pane-active-border-style "fg=#7aa2f7"
+set -g message-style "fg=#{@light_blue},bg=#{@mid_blue}"
+set -g message-command-style "fg=#{@light_blue},bg=#{@mid_blue}"
+
+set -g pane-border-style "fg=#{@mid_blue}"
+set -g pane-active-border-style "fg=#{@light_blue}"
 
 set -g status "on"
 set -g status-justify "left"
 
-set -g status-style "fg=#7aa2f7,bg=#16161e"
+set -g status-style "bg=#{@black}"
 
 set -g status-left-length "100"
 set -g status-right-length "100"
@@ -60,27 +70,28 @@ set -g status-right-length "100"
 set -g status-left-style NONE
 set -g status-right-style NONE
 
-set -g status-left "#[fg=#15161e,bg=#7aa2f7,bold] #S #[fg=#7aa2f7,bg=#16161e,nobold,nounderscore,noitalics"
-set -g status-right "#[fg=#16161e,bg=#16161e,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#16161e] #{prefix_highlight} #[fg=#3b4261,bg=#16161e,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#3b4261] %Y-%m-%d  %I:%M %p #[fg=#7aa2f7,bg=#3b4261,nobold,nounderscore,noitalics]#[fg=#15161e,bg=#7aa2f7,bold] #h "
-if-shell '[ "$(tmux show-option -gqv "clock-mode-style")" == "24" ]' {
-  set -g status-right "#[fg=#16161e,bg=#16161e,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#16161e] #{prefix_highlight} #[fg=#3b4261,bg=#16161e,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#3b4261] %Y-%m-%d  %H:%M #[fg=#7aa2f7,bg=#3b4261,nobold,nounderscore,noitalics]#[fg=#15161e,bg=#7aa2f7,bold] #h "
-}
-
-setw -g window-status-activity-style "underscore,fg=#a9b1d6,bg=#16161e"
-setw -g window-status-separator ""
-setw -g window-status-style "NONE,fg=#a9b1d6,bg=#16161e"
-setw -g window-status-format "#[fg=#16161e,bg=#16161e,nobold,nounderscore,noitalics]#[default] #I #W #F #[fg=#16161e,bg=#16161e,nobold,nounderscore,noitalics]"
-setw -g window-status-current-format "#[fg=#16161e,bg=#3b4261,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#3b4261,bold] #I #W #F #[fg=#3b4261,bg=#16161e,nobold,nounderscore,noitalics]"
-
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 # tmux-plugins/tmux-prefix-highlight support
-set -g @prefix_highlight_output_prefix "#[fg=#e0af68]#[bg=#16161e]#[fg=#16161e]#[bg=#e0af68]"
-set -g @prefix_highlight_output_suffix ""
+set -g @prefix_highlight_empty_prompt " #S "
+set -g @prefix_highlight_empty_attr "fg=#{@status_fg},bg=#{@status_bg},bold"
+set -g @prefix_highlight_fg "#{@status_fg}"
+set -g @prefix_highlight_bg "#{@status_bg_prefix}"
+set -g @prefix_highlight_prefix_prompt "#[bold]#S"
+
+set -g status-left "#{prefix_highlight}#[bg=#{@black}] "
+set -g status-right "#[fg=#{@status_fg_dim},bg=#{@status_bg_dim}] %Y-%m-%d %H:%M #[bg=#{@black}] #[fg=#{@status_fg},bg=#{@status_bg},bold] #h "
+#
+# setw -g window-status-separator ""
+setw -g window-status-format "#[fg=#{@mid_blue},bg=#{@mid_black},nobold,nounderscore,noitalics] #I #W #F "
+setw -g window-status-current-format "#[fg=#{@status_fg_dim},bg=#{@status_bg_dim},bold] #I #W #F "
+
 
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-yank'
+
 
 if "test ! -d ~/.tmux/plugins/tpm" \
    "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
